2008-03-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil.Cil/OpCode.cs
	* Mono.Cecil.Binary/RVA.cs
	* Mono.Cecil.Binary/DataDirectory.cs:
		Avoid boxing/unboxing when == or != operators are used.
		Results in significant memory savings for Gendarme.

2008-03-08  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs:
		Protect from malformed RIDs.
	* Mono.Cecil/AggressiveReflectionReader.cs:
		Create the m_events and m_properties tables
		even if they contains 0 elements.

2008-02-26  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Binary/ImageReader.cs:
		Avoid throwing non desired exceptions.

2008-02-25  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs:
		Avoid throwing in case a constant
		is of type object.

2008-02-19  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/DefaultImporter.cs:
		Add support for importing function pointers. Based on a
		patch by Andrea Carlo Ornstein <andrea.ornstein@st.com>.

	* Mono.Cecil/ModuleDefinition.cs:
		Add a Inject(FieldDef) overload for symmetry.
		Patch by Andrea Carlo Ornstein <andrea.ornstein@st.com>.

2008-02-16  Jb Evain  <jbevain@novell.com>

	* CodeGen/templates/MetadataRowReader.cs
	  CodeGen/templates/Utilities.cs
	  CodeGen/templates/MetadataRowWriter.cs
	  Mono.Cecil.Metadata/MetadataRowReader.cs
	  Mono.Cecil.Metadata/MetadataRowWriter.cs
	  Mono.Cecil.Metadata/Utilities.cs:
		Use a good old traditional array instead of an
		Hashtable. Based on a patch by Carlo Kok <ck@remobjects.com>.

2008-02-07  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/BaseAssemblyResolver.cs:
		deal with 2.1 corlib on Mono.

2008-02-07  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/MethodDefinition.cs:
		add last Is method for semantics property.

2008-02-05  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/TypeDefinition.cs:
		System.Enum by itself is not a value type.
		Fix #351879.

	* Mono.Cecil.Signatures/SignatureReader.cs:
		Properly read fnptr local variables. Fix #358507.
